--- a/.classpath
+++ b/.classpath
@@ -1,74 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="con" path="com.google.cloud.tools.eclipse.appengine.libraries/master-container">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry exported="true" kind="con" path="com.google.cloud.tools.eclipse.appengine.libraries/master-container">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/api-common-1.7.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/auto-value-1.4.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/error_prone_annotations-2.1.2.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/firebase-admin-6.5.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/gax-1.30.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/gax-grpc-1.30.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/gax-httpjson-0.47.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-api-client-1.25.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-api-client-gson-1.25.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-api-services-storage-v1-rev135-1.24.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-auth-library-credentials-0.7.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-auth-library-oauth2-http-0.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-cloud-core-1.43.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-cloud-core-grpc-1.43.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-cloud-core-http-1.43.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-cloud-firestore-0.61.0-beta.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-cloud-storage-1.43.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-http-client-1.25.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-http-client-appengine-1.24.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-http-client-gson-1.25.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-http-client-jackson-1.24.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-http-client-jackson2-1.25.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/google-oauth-client-1.25.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/grpc-auth-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/grpc-context-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/grpc-core-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/grpc-netty-shaded-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/grpc-protobuf-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/grpc-protobuf-lite-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/grpc-stub-1.13.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/gson-2.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/guava-20.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/httpclient-4.5.5.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/httpcore-4.4.9.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/j2objc-annotations-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/jackson-core-2.9.6.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/jackson-core-asl-1.9.11.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/joda-time-2.9.2.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/json-20160810.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/jsr305-3.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/netty-buffer-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/netty-codec-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/netty-codec-http-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/netty-common-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/netty-handler-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/netty-resolver-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/netty-transport-4.1.22.Final.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/opencensus-api-0.15.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/opencensus-contrib-grpc-metrics-0.12.3.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/opencensus-contrib-grpc-util-0.15.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/opencensus-contrib-http-util-0.15.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/protobuf-java-3.6.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/protobuf-java-util-3.6.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/proto-google-cloud-firestore-v1beta1-0.26.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/proto-google-common-protos-1.12.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/proto-google-iam-v1-0.12.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/slf4j-api-1.7.25.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/threetenbp-1.3.3.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/GMapsFX-2.10.0.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/firebase-storage-11.0.4.jar"/>
-	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/libs/slf4j-simple-1.7.25.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/api-common-1.7.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/auto-value-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/error_prone_annotations-2.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/firebase-admin-6.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/firebase-storage-11.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/firebase-storage-common-11.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/gax-1.30.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/gax-grpc-1.30.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/gax-httpjson-0.47.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/GMapsFX-2.10.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-api-client-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-api-client-gson-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-api-services-storage-v1-rev135-1.24.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-auth-library-credentials-0.7.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-auth-library-credentials-0.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-auth-library-oauth2-http-0.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-cloud-core-1.43.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-cloud-core-grpc-1.43.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-cloud-core-http-1.43.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-cloud-firestore-0.61.0-beta.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-cloud-storage-1.43.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-http-client-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-http-client-appengine-1.24.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-http-client-gson-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-http-client-jackson-1.24.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-http-client-jackson2-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/google-oauth-client-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/grpc-auth-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/grpc-context-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/grpc-core-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/grpc-netty-shaded-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/grpc-protobuf-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/grpc-protobuf-lite-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/grpc-stub-1.13.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/gson-2.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/guava-20.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/httpclient-4.5.5.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/httpcore-4.4.9.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/j2objc-annotations-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/jackson-core-2.9.6.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/jackson-core-asl-1.9.11.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/joda-time-2.9.2.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/json-20160810.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/jsr305-3.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/netty-buffer-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/netty-codec-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/netty-codec-http-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/netty-common-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/netty-handler-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/netty-resolver-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/netty-transport-4.1.22.Final.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/opencensus-api-0.15.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/opencensus-contrib-grpc-metrics-0.12.3.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/opencensus-contrib-grpc-util-0.15.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/opencensus-contrib-http-util-0.15.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/protobuf-java-3.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/protobuf-java-util-3.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/proto-google-cloud-firestore-v1beta1-0.26.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/proto-google-common-protos-1.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/proto-google-iam-v1-0.12.0.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/slf4j-simple-1.7.25.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/threetenbp-1.3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
