--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_141">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="com.google.cloud.tools.eclipse.appengine.libraries/master-container">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
@@ -76,5 +72,6 @@
 	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/slf4j-simple-1.7.25.jar"/>
 	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/threetenbp-1.3.3.jar"/>
+	<classpathentry kind="lib" path="C:/my_projects/eclipse_projects/MyGPSx/MyGPSx/libs/org.eclipse.jgit-5.3.0.201903130848-r.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
